app/assets/stylesheets/components/_red_sheet.sass
[data-component="red_sheet"]
  position: fixed
  top: 0
  left: 0
  right: 0
  bottom: 0
  background: $primary-color
  color: white
  text-align: center
  opacity: 0
  pointer-events: none
  transition: opacity 0.25s
  z-index: 9

  h1
    +heading_md
    margin-top: 80px

  input[type="submit"]
    +button-color(darken($primary-color, 5%))

  textarea + input[type="submit"]
    +button-size(1.5)
    +button-color($primary-color)

  label
    display: inline-block
    vertical-align: middle
    margin-right: 10px

  p
    margin-top: $space/2

  textarea
    background: rgba(255, 255, 255, 0.1)
    color: white
    border: none
    font-size: 1.2rem
    margin: $space (-$space)
    padding: 15px
    height: calc(100vh - 360px)
    max-width: none
    width: 100vw
    border-radius: 0

    &:focus
      outline: none
      box-shadow: none
      background: white
      color: $default-font-color

      @media screen and (max-width: #{$tablet})
        position: fixed
        top: 0
        left: 0
        right: 0
        bottom: 0
        width: 100%
        height: auto
        margin: 0
        z-index: 1

        + input[type="submit"]
          position: absolute
          z-index: 2
          width: 150px
          margin-left: -75px
          left: 50%
          bottom: 10px
          text-align: center

    +gt($tablet)
      max-width: 600px
      min-height: 30vh

    +gt($tablet-landscape)
      max-width: 1000px

  &.show
    pointer-events: auto
    opacity: 1

  .close
    background: transparent
    border: 0px
    color: white
    font-size: 5rem
    position: absolute
    top: $space
    right: $space
    font-weight: 100

    &:hover
      box-shadow: none
      border: 0
      color: map-get($colors, yellow)

